# MyPersona

./: .env.example  .gitignore  BAILEY_OS_SWARM_BUILD_SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ILTP_SPEC.md  MISSION.md  PROJECT_PLAN.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  config.py  main.py  models.py
app/routers/: __init__.py  api.py
app/services/: __init__.py  calendar_context.py  drift_guard.py  lens_assembly.py  llm_client.py  role_guess.py  time_context.py
config/: default.yaml
demo/: run_demo.py
distribution/: claude_skill.md  custom_gpt.json  universal_system_prompt.md
docs/: architecture.md  critical_review.md  iphone_mvp_spec.md  labeled_data_solution.md  mcp_server_spec.md  mypersona_architecture.md  realtime_adaptive_learning.md  three_model_architecture.md  what_makes_this_work.md
eval/: __init__.py  baselines.py  metrics.py  report.py  run.py
eval/agents/: __init__.py  conversation_agent.py  judge_agent.py  multi_turn_eval.py
eval/datasets/: __init__.py  approach_avoidance_samples.json  conversations.json  generate.py  governance_cases.json  memories.json  mood_samples.json  schemas.py
eval/harness/: __init__.py  approach_eval.py  calibration_eval.py  decay_eval.py  gap_eval.py  governance_eval.py  introspective_eval.py  mood_eval.py
ios/Sources/MyPersona/: ContextProvider.swift  MicroBehaviorDetector.swift
scripts/: run_stream.py
src/: __init__.py  agent.py  belief.py  engines.py  memory.py  models.py  server.py
src/config/: __init__.py  settings.py
src/detection/: __init__.py  classifier.py  delta_detector.py
src/expectation/: __init__.py  baseline_builder.py  context_triggers.py  generator.py
src/ingestion/: __init__.py  preprocessor.py  stream_processor.py  x_client.py
src/llm/: __init__.py  client.py  prompts.py  reasoning.py
src/models/: __init__.py  delta.py  discourse.py  event.py  expectation.py  market.py
src/storage/: __init__.py  event_store.py
src/validation/: __init__.py  correlator.py  market_tracker.py  scorer.py
tests/: __init__.py  conftest.py  test_belief_extractor.py  test_context.py  test_decomposition.py  test_drift_guard.py  test_engines.py  test_fusion.py  test_governance.py  test_integration.py  test_lens_assembly.py  test_models.py  test_mood_detector.py  test_role_guess.py  test_time_context.py  test_timeline.py  test_truth_layer.py  test_types.py
tests/test_detection/: __init__.py  test_delta_detector.py
training/: FORMAT.md
training/examples/: README.md  age_11.jsonl  age_21.jsonl  age_31.jsonl  age_41.jsonl  age_61.jsonl  age_81.jsonl  comfort_elderly.jsonl  health_safety.jsonl  parental_context.jsonl  play_adventure.jsonl  quiet_reflective.jsonl  romantic_context.jsonl  social_status.jsonl  work_stress.jsonl
(+5 files in other folders)
