[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypersona"
version = "0.1.0"
description = "Discourse Delta Detection System - Detecting market-moving events by analyzing what ISN'T being said"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MyPersona Team", email = "team@mypersona.ai"}
]
keywords = [
    "nlp",
    "sentiment-analysis",
    "market-analysis",
    "event-detection",
    "social-media",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "anthropic>=0.18.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
full = [
    "psycopg2-binary>=2.9.0",  # PostgreSQL/TimescaleDB
    "neo4j>=5.0.0",             # Graph database
    "pinecone-client>=2.0.0",   # Vector store
    "sentence-transformers>=2.2.0",  # Local embeddings
    "bertopic>=0.15.0",         # Topic modeling
    "fastapi>=0.100.0",         # API server
    "uvicorn>=0.23.0",          # ASGI server
]

[project.urls]
Homepage = "https://github.com/mypersona/mypersona"
Documentation = "https://docs.mypersona.ai"

[project.scripts]
mypersona = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
