[project]
name = "emotional-memory-agent"
version = "0.1.0"
description = "Dual-engine emotional memory agent — tracks what you should want vs what you actually want"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0",
    "pinecone>=5.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mypersona = "src.agent:main"
